Fixed issues with buttons and spacing.

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -25,6 +25,17 @@ body {
     border-radius: 5px;
 }
 
+.send-message {
+    background-color: #e45c3a;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    border-radius: 5px;
+    border: none;
+    font-family: 'Rowdies', 'Helvetica', 'sans-serif';
+}
+
 .book:hover, .join:hover {
     background-color: #5798b2;
     color: white;
@@ -110,7 +121,7 @@ h4 {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px;
+    margin-top: -200px;
 }
 
 #hero-box {
@@ -146,7 +157,7 @@ h4 {
     color:white;
     font-family: 'Rowdies', 'Helvetica', 'sans-serif';
     font-size: 2em;
-    margin-top: 10px;
+    margin-top: 120px;
 }
 
 .icon {
@@ -335,9 +346,9 @@ form {
     height: 5em;
   }
   
-  .button {
+  .send-message {
     /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
+    margin-left: 95px; /* same size as the label elements */
   }
   
   button {
